sm7250-common: overlay: Enable burn-in-protection in Ambient Display
Change-Id: Iae216e47866c13be1a11b11bd32c787a8c22f1a6
Signed-off-by: firebird11 <hbgassel@gmail.com>
Signed-off-by: c79 <vexed@riseup.net>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -342,9 +342,11 @@
     <!-- Specify custom blanking delay of the display -->
     <integer name="config_screen_off_delay">0</integer>
 
+    <!-- If true, the display will be shifted around in ambient mode. -->
+    <bool name="config_enableBurnInProtection">true</bool>
+
     <!-- SQLite -->
     <string name="db_default_journal_mode">MEMORY</string>
     <string name="db_default_sync_mode">OFF</string>
     <string name="db_wal_sync_mode">OFF</string>
-
 </resources>
